[tool.poetry]
name = "recorder-module-1"
version = "0.1.0"
description = ""
authors = ["pikamonvvs <pikamonvvs@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anyio = "^4.4.0"
ffmpeg-python = "^0.2.0"
httpx = "^0.27.0"
h2 = "^4.1.0"
streamlink = "^6.8.1"
httpx-socks = "^0.9.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
