[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
[project]
name = "recorder-module-1"
version = "0.1.0"
description = ""
authors = [
    {name = "pikamonvvs", email = "pikamonvvs@naver.com"},
]
dependencies = [
    "anyio<5.0.0,>=4.4.0",
    "ffmpeg-python<1.0.0,>=0.2.0",
    "httpx<1.0.0,>=0.27.0",
    "h2<5.0.0,>=4.1.0",
    "streamlink<7.0.0,>=6.8.1",
    "httpx-socks<1.0.0,>=0.9.1",
    "loguru<1.0.0,>=0.7.2",
    "pyinstaller>=6.9.0",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = {text = "MIT"}

